--- a/css/styles.css
+++ b/css/styles.css
@@ -1,256 +1,257 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Arbutus+Slab&display=swap");
-
 :root {
-  --primary-color-dark3: #9a2409;
-  --primary-color-dark2: #c63810;
-  --primary-color-dark1: #ea521a;
-  --primary-color: #ed7b49;
-  --primary-color-light1: #f2a378;
-  --primary-color-light2: #f8c5a5;
-  --primary-color-light3: #fce2cf;
-  --primary-color-light4: #f5f5f5;
-  /* --secondary-color: #0056b8; */
-  --secondary-color0: #000132;
-  --secondary-color1: #03045e;
-  --secondary-color2: #023e8a;
-  --secondary-color3: #0077b6;
-  --secondary-color4: #0096c7;
-  --secondary-color5: #00b4d8;
-  --secondary-color6: #48cae4;
-  --secondary-color7: #90e0ef;
-  --secondary-color8: #ade8f4;
-  --secondary-color9: #caf0f8;
-  --terciary-color: #ffffff;
-  --terciary-color1: #f7f3f2;
-  --very-light-grey: rgb(241, 241, 241);
-  --light-grey: rgb(184, 184, 184);
-  --medium-grey: rgb(160, 160, 160);
-  --dark-grey: rgb(121, 121, 121);
-  --space-3xs: 0.4rem;
-  --space-2xs: 0.5rem;
-  --space-xs: 0.8rem;
-  --space-s: 1.2rem;
-  --space-m: 2rem;
-  --space-l: 3.2rem;
-  --space-xl: 4rem;
-  --space-2xl: 4.8rem;
-  --space-3xl: 7rem;
-  --space-4xl: 8.5rem;
-  --space-5xl: 10.4rem;
-  --space-6xl: 11.1rem;
-  --space-7xl: 12.4rem;
-  --card-border-radius: 0.5rem;
+    --primary-color-dark3: #9a2409;
+    --primary-color-dark2: #c63810;
+    --primary-color-dark1: #ea521a;
+    --primary-color: #ed7b49;
+    --primary-color-light1: #f2a378;
+    --primary-color-light2: #f8c5a5;
+    --primary-color-light3: #fce2cf;
+    --primary-color-light4: #f5f5f5;
+    /* --secondary-color: #0056b8; */
+    --secondary-color0: #000132;
+    --secondary-color1: #03045e;
+    --secondary-color2: #023e8a;
+    --secondary-color3: #0077b6;
+    --secondary-color4: #0096c7;
+    --secondary-color5: #00b4d8;
+    --secondary-color6: #48cae4;
+    --secondary-color7: #90e0ef;
+    --secondary-color8: #ade8f4;
+    --secondary-color9: #caf0f8;
+    --terciary-color: #ffffff;
+    --terciary-color1: #f7f3f2;
+    --very-light-grey: rgb(241, 241, 241);
+    --light-grey: rgb(184, 184, 184);
+    --medium-grey: rgb(160, 160, 160);
+    --dark-grey: rgb(121, 121, 121);
+    --space-3xs: 0.4rem;
+    --space-2xs: 0.5rem;
+    --space-xs: 0.8rem;
+    --space-s: 1.2rem;
+    --space-m: 2rem;
+    --space-l: 3.2rem;
+    --space-xl: 4rem;
+    --space-2xl: 4.8rem;
+    --space-3xl: 7rem;
+    --space-4xl: 8.5rem;
+    --space-5xl: 10.4rem;
+    --space-6xl: 11.1rem;
+    --space-7xl: 12.4rem;
+    --card-border-radius: 0.5rem;
 }
-.no-link{
-  text-decoration: none;
-  color:white;
+
+.no-link {
+    text-decoration: none;
+    color: white;
 }
+
 * {
-  padding: unset;
-  margin: unset;
+    padding: unset;
+    margin: unset;
 }
 
 html,
 body {
-  scroll-behavior: smooth;
-  font-size: 17px;
-  font-family: "Lato", sans-serif;
+    scroll-behavior: smooth;
+    font-size: 17px;
+    font-family: "Lato", sans-serif;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 nav {
-  position: sticky;
-  padding: var(--space-s);
-  background: var(--primary-color);
-  z-index: 10;
-  top: 0;
+    position: sticky;
+    padding: var(--space-s);
+    background: var(--primary-color);
+    z-index: 10;
+    top: 0;
 }
 
 main {
-  flex-grow: 1;
+    flex-grow: 1;
 }
 
 .title,
 .title2 {
-  font-family: "Arbutus Slab", serif;
-
-  font-size: 2.4rem;
-  line-height: 2.8rem;
-  font-weight: 400;
-  margin-bottom: var(--space-s);
+    font-family: "Arbutus Slab", serif;
+    font-size: 2.4rem;
+    line-height: 2.8rem;
+    font-weight: 400;
+    margin-bottom: var(--space-s);
 }
 
 .title {
-  color: var(--secondary-color1);
+    color: var(--secondary-color1);
 }
 
 .title2 {
-  color: var(--terciary-color);
+    color: var(--terciary-color);
 }
 
 .subtitle {
-  font-size: 1.2rem;
-  color: var(--secondary-color1);
+    font-size: 1.2rem;
+    color: var(--secondary-color1);
 }
 
 .text,
 .text-with-padding {
-  font-size: 1rem;
-  line-height: 1.8rem;
+    font-size: 1rem;
+    line-height: 1.8rem;
 }
 
 .logo {
-  width: 3rem;
+    width: 8rem;
 }
 
 .locationEvent {
-  display: none;
-  color: var(--terciary-color);
-  margin-left: 1rem;
+    display: none;
+    color: var(--terciary-color);
+    margin-left: 1rem;
 }
 
 .locationEvent-mobile {
-  color: var(--terciary-color);
-  padding: 0 var(--space-m) var(--space-s);
-  font-size: 1.5rem;
-  text-align: center;
+    color: var(--terciary-color);
+    padding: 0 var(--space-m) var(--space-s);
+    font-size: 1.5rem;
+    text-align: center;
 }
 
 .hamburguer-menu {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: auto;
 }
 
 .menu {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 1rem;
-  align-items: center;
-  width: 100%;
-  background: var(--primary-color);
-  /* color: var(--terciary-color); */
-  transition: height 0.5s ease-out;
-  height: 0;
-  overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    align-items: center;
+    width: 100%;
+    background: var(--primary-color);
+    /* color: var(--terciary-color); */
+    transition: height 0.5s ease-out;
+    height: 0;
+    overflow: hidden;
 }
 
-.menu > li {
-  list-style-type: none;
-  font-size: 1.8rem;
+.menu>li {
+    list-style-type: none;
+    font-size: 1.8rem;
 }
 
-.menu > li > .primary-link {
-  font-size: 1rem;
+.menu>li>.primary-link {
+    font-size: 1rem;
 }
 
 .item-menu {
-  text-decoration: none;
-  color: var(--terciary-color);
-  font-weight: 400;
+    text-decoration: none;
+    color: var(--terciary-color);
+    font-weight: 400;
 }
+
 .item-menu:hover {
-  color: var(--primary-color-light1);
+    color: var(--primary-color-light1);
 }
 
 .btn-toggle {
-  display: block;
-  border: unset;
-  outline: unset;
-  background: unset;
-  transition: all 0.5s ease;
+    display: block;
+    border: unset;
+    outline: unset;
+    background: unset;
+    transition: all 0.5s ease;
 }
 
-.btn-toggle > img {
-  width: 2.2rem;
+.btn-toggle>img {
+    width: 2.2rem;
 }
 
 .section-intro,
 .section-primary,
 .section-secondary,
 .section-terciary {
-  padding: var(--space-l) var(--space-s);
+    padding: var(--space-l) var(--space-s);
 }
 
 .section-intro {
-  display: flex;
-  flex-direction: column;
-  background-color: var(--terciary-color);
+    display: flex;
+    flex-direction: column;
+    background-color: var(--terciary-color);
 }
 
 .section-primary {
-  background-color: var(--primary-color);
-  color: var(--secondary-color2);
+    background-color: var(--primary-color);
+    color: var(--secondary-color2);
 }
 
 .section-secondary {
-  background-color: var(--secondary-color4);
-  color: var(--terciary-color);
+    background-color: var(--secondary-color4);
+    color: var(--terciary-color);
 }
 
 .section-terciary {
-  background-color: var(--terciary-color);
-  color: var(--secondary-color2);
+    background-color: var(--terciary-color);
+    color: var(--secondary-color2);
 }
 
 .primary-link,
 .secondary-link {
-  display: inline-block;
-  text-decoration: none;
-  padding: var(--space-s) var(--space-m);
-  border-radius: 17.6rem;
-  margin: var(--space-m) 0;
+    display: inline-block;
+    text-decoration: none;
+    padding: var(--space-s) var(--space-m);
+    border-radius: 17.6rem;
+    margin: var(--space-m) 0;
 }
 
 .terciary-link {
-  display: inline-block;
-  text-decoration: none;
-  padding: var(--space-xs) var(--space-m);
-  border-radius: 17.6rem;
-  margin: var(--space-s) 0;
+    display: inline-block;
+    text-decoration: none;
+    padding: var(--space-xs) var(--space-m);
+    border-radius: 17.6rem;
+    margin: var(--space-s) 0;
 }
 
 .primary-link,
 .terciary-link {
-  background-color: var(--terciary-color);
-  color: var(--primary-color);
-  border-style: solid;
-  border-width: 2px;
-  border-color: var(--primary-color);
-  transition: duration 0.3s;
-  transition-property: transform;
+    background-color: var(--terciary-color);
+    color: var(--primary-color);
+    border-style: solid;
+    border-width: 2px;
+    border-color: var(--primary-color);
+    transition: duration 0.3s;
+    transition-property: transform;
 }
 
 .secondary-link {
-  background-color: var(--terciary-color);
-  color: var(--secondary-color2);
-  transition: duration 0.3s;
-  transition-property: transform;
+    background-color: var(--terciary-color);
+    color: var(--secondary-color2);
+    transition: duration 0.3s;
+    transition-property: transform;
 }
 
 .primary-link:hover {
-  /* background-color: var(--primary-color-light4); */
-  transform: scale(1.05);
-  /*color: var(--terciary-color);*/
+    /* background-color: var(--primary-color-light4); */
+    transform: scale(1.05);
+    /*color: var(--terciary-color);*/
 }
 
 .secondary-link:hover {
-  /* background-color: var(--secondary-color9); */
-  transform: scale(1.05);
+    /* background-color: var(--secondary-color9); */
+    transform: scale(1.05);
 }
 
 .img-intro {
-  width: 100%;
-  margin: var(--space-m) 0;
+    width: 100%;
+    margin: var(--space-m) 0;
 }
 
 .img-section-primary,
@@ -259,21 +260,19 @@ main {
 .img-profesional-hastadonde,
 .wrapper-video-section-img,
 .img-profesional-medallas {
-  width: 100%;
+    width: 100%;
 }
 
-.img-profesional-medallas {
-}
+.img-profesional-medallas {}
 
-.wrapper-video-section-img {
-}
+.wrapper-video-section-img {}
 
 .wrapper-video-section-hastadonde {
-  text-align: left;
+    text-align: left;
 }
 
 .img-profesional-queson {
-  padding-top: var(--space-s);
+    padding-top: var(--space-s);
 }
 
 .video-container-home,
@@ -281,259 +280,245 @@ main {
 .info-aprende-mejores,
 .info-mas-alto,
 .intro-skills {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .info-medallas {
-  gap: var(--space-s);
+    gap: var(--space-s);
 }
 
 .display-flow {
-  display: flex;
-  flex-direction: column-reverse;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 .wrapper-video-section:last-child {
-  padding: var(--space-m) 0;
-  text-align: center;
+    padding: var(--space-m) 0;
+    text-align: center;
 }
 
 footer {
-  text-align: center;
+    text-align: center;
 }
 
 .footer-credits,
 .footer-section,
 footer {
-  background-color: var(--secondary-color0);
+    background-color: var(--secondary-color0);
 }
 
 .footer-section {
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  gap: var(--space-s) var(--space-m);
-  padding: var(--space-m) var(--space-s);
-  justify-content: center;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: var(--space-s) var(--space-m);
+    padding: var(--space-m) var(--space-s);
+    justify-content: center;
 }
 
 .footer-item {
-  text-decoration: none;
-  color: var(--secondary-color9);
+    text-decoration: none;
+    color: var(--secondary-color9);
 }
 
 .footer-credits {
-  padding-bottom: var(--space-s);
-  color: var(--secondary-color9);
+    padding-bottom: var(--space-s);
+    color: var(--secondary-color9);
 }
 
 .lista-cursos {
-  display: flex;
-  flex-direction: column;
-  gap: var(--space-xs);
-  padding: var(--space-s) var(--space-xs);
-  color: var(--terciary-color);
+    display: flex;
+    flex-direction: column;
+    gap: var(--space-xs);
+    padding: var(--space-s) var(--space-xs);
+    color: var(--terciary-color);
 }
 
-.lista-cursos > li {
-  font-size: 18px;
-  list-style: none;
-  /* border-bottom: 1px solid var(--terciary-color); */
-  padding-bottom: 2rem;
-  text-align: left;
+.lista-cursos>li {
+    font-size: 18px;
+    list-style: none;
+    /* border-bottom: 1px solid var(--terciary-color); */
+    padding-bottom: 2rem;
+    text-align: left;
 }
 
 .cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
-  padding: 20px;
-  grid-gap: 40px;
-  text-align: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+    padding: 20px;
+    grid-gap: 40px;
+    text-align: center;
 }
+
 .card {
-  background-color: var(--secondary-color4);
-  border-radius: 20px;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.18);
+    background-color: var(--secondary-color4);
+    border-radius: 20px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.18);
 }
+
 .skill-container {
-  position: relative;
-  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    position: relative;
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 }
+
 .skill-img {
-  width: 100%;
-  display: block;
-  border-radius: 20px 20px 0 0;
+    width: 100%;
+    display: block;
+    border-radius: 20px 20px 0 0;
 }
+
 .skill-container:after {
-  content: "";
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 20px 20px 0 0;
-  opacity: 0.7;
+    content: "";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 20px 20px 0 0;
+    opacity: 0.7;
 }
 
 .details {
-  padding: 20px 10px;
+    padding: 20px 10px;
 }
 
-.details > h3 {
-  color: var(--terciary-color);
-  font-weight: 600;
-  font-size: 26px;
-  margin: 10px 0 10px 0;
-  padding: var(--space-s) var(--space-xs);
+.details>h3 {
+    color: var(--terciary-color);
+    font-weight: 600;
+    font-size: 26px;
+    margin: 10px 0 10px 0;
+    padding: var(--space-s) var(--space-xs);
 }
-.details > p {
-  color: var(--terciary-color);
-  font-size: 15px;
-  line-height: 30px;
-  font-weight: 400;
+
+.details>p {
+    color: var(--terciary-color);
+    font-size: 15px;
+    line-height: 30px;
+    font-weight: 400;
 }
+
 .bandera {
-  width: 2.2rem;
-  height: 1.5rem;
+    width: 2.2rem;
+    height: 1.5rem;
 }
+
 .link-idioma {
-  margin: 0px 20px;
+    margin: 0px 20px;
 }
+
 .listaTransporte {
-  list-style: none;
+    list-style: none;
 }
+
 @media (min-width: 768px) {
-  .hamburguer-menu {
-    width: 50%;
-  }
-
-  nav {
-    display: flex;
-    justify-content: space-between;
-    position: sticky;
-    top: 0;
-    right: 0;
-    padding: var(--space-s) var(--space-l);
-  }
-
-  .menu {
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: row;
-    align-items: center;
-    gap: 2rem;
-    font-size: 1.2rem;
-    overflow: unset;
-    height: 100%;
-    width: 50%;
-  }
-
-  .menu > li > .primary-link:hover {
-    /* background-color: var(--very-light-grey); */
-    color: var(--primary-color);
-  }
-
-  .btn-toggle {
-    display: none;
-  }
-
-  .section-intro {
-    flex-direction: row;
-    align-items: center;
-    padding-left: var(--space-l);
-    padding-right: var(--space-l);
-  }
-
-  .section-intro > article {
-    width: 50%;
-  }
-
-  .img-intro {
-    width: 50%;
-  }
-
-  .menu > li {
-    font-size: 1rem;
-  }
-
-  .menu > li > .primary-link {
-    margin: unset;
-  }
-
-  .section-primary,
-  .section-secondary,
-  .section-terciary {
-    text-align: center;
-    padding: var(--space-xl) var(--space-l);
-  }
-
-  .skills {
-    grid-template-columns: repeat(3, 15rem);
-    grid-template-rows: repeat(2, 1fr);
-    justify-content: center;
-    padding: var(--space-xl) 0;
-  }
-
-  .video-container-home {
-    flex-direction: row;
-    align-items: center;
-  }
-
-  .section-terciary {
-    flex-direction: row-reverse;
-    align-items: center;
-  }
-
-  .info-medallas,
-  .info-mas-alto,
-  .intro-skills {
-    flex-direction: row-reverse;
-    align-items: center;
-    gap: 2rem;
-  }
-
-  .wrapper-video-section {
-    text-align: left;
-    width: 50%;
-  }
-
-  .video-skills {
-    width: 80%;
-    height: 20rem;
-  }
-
-  .wrapper-image-section-right {
-    /* padding-top: var(--space-m); */
-    text-align: right;
-    width: 50%;
-  }
-
-  .wrapper-image-section-left {
-    text-align: left;
-    width: 50%;
-  }
-
-  .info-aprende-mejores {
-    flex-direction: row;
-    align-items: center;
-    gap: 2rem;
-  }
-
-  .section-secondary {
-    flex-direction: row;
-    align-items: center;
-  }
-
-  footer {
-    font-size: 0.7rem;
-  }
-
-  .locationEvent {
-    display: block;
-  }
-
-  .locationEvent-mobile {
-    display: none;
-  }
+    .hamburguer-menu {
+        width: 50%;
+    }
+    nav {
+        display: flex;
+        justify-content: space-between;
+        position: sticky;
+        top: 0;
+        right: 0;
+        padding: var(--space-s) var(--space-l);
+    }
+    .menu {
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: row;
+        align-items: center;
+        gap: 2rem;
+        font-size: 1.2rem;
+        overflow: unset;
+        height: 100%;
+        width: 50%;
+    }
+    .menu>li>.primary-link:hover {
+        /* background-color: var(--very-light-grey); */
+        color: var(--primary-color);
+    }
+    .btn-toggle {
+        display: none;
+    }
+    .section-intro {
+        flex-direction: row;
+        align-items: center;
+        padding-left: var(--space-l);
+        padding-right: var(--space-l);
+    }
+    .section-intro>article {
+        width: 50%;
+    }
+    .img-intro {
+        width: 50%;
+    }
+    .menu>li {
+        font-size: 1rem;
+    }
+    .menu>li>.primary-link {
+        margin: unset;
+    }
+    .section-primary,
+    .section-secondary,
+    .section-terciary {
+        text-align: center;
+        padding: var(--space-xl) var(--space-l);
+    }
+    .skills {
+        grid-template-columns: repeat(3, 15rem);
+        grid-template-rows: repeat(2, 1fr);
+        justify-content: center;
+        padding: var(--space-xl) 0;
+    }
+    .video-container-home {
+        flex-direction: row;
+        align-items: center;
+    }
+    .section-terciary {
+        flex-direction: row-reverse;
+        align-items: center;
+    }
+    .info-medallas,
+    .info-mas-alto,
+    .intro-skills {
+        flex-direction: row-reverse;
+        align-items: center;
+        gap: 2rem;
+    }
+    .wrapper-video-section {
+        text-align: left;
+        width: 50%;
+    }
+    .video-skills {
+        width: 80%;
+        height: 20rem;
+    }
+    .wrapper-image-section-right {
+        /* padding-top: var(--space-m); */
+        text-align: right;
+        width: 50%;
+    }
+    .wrapper-image-section-left {
+        text-align: left;
+        width: 50%;
+    }
+    .info-aprende-mejores {
+        flex-direction: row;
+        align-items: center;
+        gap: 2rem;
+    }
+    .section-secondary {
+        flex-direction: row;
+        align-items: center;
+    }
+    footer {
+        font-size: 0.7rem;
+    }
+    .locationEvent {
+        display: block;
+    }
+    .locationEvent-mobile {
+        display: none;
+    }
 }
